# bt

./: .clang-format  .gitignore  Aliases.h  Bencode.cpp  Bencode.h  CMakeLists.txt  README.md  Torrent.cpp  Torrent.h  main.cpp  meson.build  shell.nix  test.cpp  test.py  vcpkg.json
examples/: 2017-IWT4S-HDR_LP-dataset.zip-8ed33d02d6b36c389dd077ea2478cc83ad117ef3.torrent  EspnUHd_archive.torrent  POLEN23E.torrent  Unigine_Heaven-4.0.torrent  crimeandpunishment.torrent  icsdata-d35-million-us-domestic-flights-from-1990-to-2009_20100803170854-tsv.zip-a2ccf94bbb4af222bf8e69dad60a68a29f310d9a.torrent  logo_20230906_20230906_1711_archive.torrent  wsj-fixed.torrent
include/: Aliases.h  Bencode.h  SHA1.h  Torrent.h  Tracker.h
src/: Bencode.cpp  Torrent.cpp  Tracker.cpp  main.cpp
tests/: bencode.cpp  test.cpp  torrent.cpp
